syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.subscriber";
option java_outer_classname = "SubscriberProto";
option objc_class_prefix = "HLW";

package subscriber;

service SubscriberServer {
    rpc UpdateCallback (TopicUpdateRequest) returns (MainResponse) {}
}

message TopicUpdateRequest {
    string type = 1;
    string message = 2;
}

message MainResponse {
    string type = 1;
    string message = 2;
}